[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
# name it as your package name
name = "quanttide-data-agents"
# semetric versions
version = "0.1.0-alpha.1"
# describe the package within one sentence
description = "QuantTide Data Agents"
authors = [
    {name = "QuantTide Inc.", email = "opensource@quanttide.com"},
    {name = "Guo Zhang", email = "zhangguo@quanttide.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = '>=3.8'
dependencies = [
    "python-dotenv>=1.0.1",
    "dashscope>=1.19.2",
]
# dynamic = ["version"]

[project.license]
# create your license and name it as "LICENSE"
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.pdm.build]
includes = [
    "quanttide_data_agents",
]
